<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fuller Mezamashi</string>
    <string name="action_settings">Settings</string>
    //Text Label    <string name="hello_world">Hello world!</string>
    <string name="choose">時間をえらんでください</string>
    //Button    <string name="select_oji">おじ</string>
    <string name="select_alarm">アラーム</string>
    <string name="select_stopwatch">ストップウォッチ</string>
    <string name="select_timer">タイマー</string>
    <string name="set_time">セット！</string>
    <string name="choose_time">時間を選択</string>
    <string name="choose_date">日付を選択</string>
    <string name="taphere">ここをタップして\nアラームセット完了おじ!</string>
    <string name="testtime">12月23日\n12:34</string>
    <string name="time_alarm">アラーム時間</string>
    <string name="title_activity_ringing">RingingActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="hereitis">時間になりました！</string>
    <string name="test_time">12:34</string>
    <string name="alarm_snooze">スヌーズ</string>
    <string name="alarm_stop">止める</string>

</resources>
