<RelativeLayout
        tools:context=".SettingActivity"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:id="@+id/relativeLayout">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:baselineAligned="false"
            android:id="@+id/linearLayout">

        <Button
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:text="@string/select_oji"
                android:id="@+id/btnOji"
                android:textSize="15sp"/>

        <Button
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:text="@string/select_alarm"
                android:id="@+id/btnAlarm"
                android:textSize="14sp"/>

        <Button
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:text="@string/select_stopwatch"
                android:id="@+id/btnSW"
                android:textSize="14sp"/>

        <Button
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:text="@string/select_timer"
                android:id="@+id/btnTimer"
                android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignLeft="@+id/linearLayout"
            android:id="@+id/linearLayout2"
            android:layout_below="@+id/linearLayout"
            android:layout_marginTop="45dp">

        <TextClock
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textClock"/>
    </LinearLayout>

</RelativeLayout>